[package]
name = "felideaDAO"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.0", default-features = false, features = [ "psp22", ] }
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive", ] }
scale-info = { version = "2.3", default-features = false, features = [ "derive", ], optional = true }
fixed ={version = "1.23",features = ["serde"]}
dao_governance_token    = { path = "../staking_token", default-features = false, features = [ "ink-as-dependency", ] }


[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    #  "rustc-hex/std", 
    #  'bs58/std'
    'fixed/std',
    "dao_governance_token/std",

]
ink-as-dependency = []
e2e-tests = []


[profile.release]
panic = "abort"
lto   = false

[profile.dev]
panic           = "abort"
codegen-units   = 16
lto             = false
overflow-checks = false